apply plugin: 'application'
apply plugin: 'idea'

sourceCompatibility = 9
targetCompatibility = 9

repositories {
     mavenCentral()
}

mainClassName = 'com.movies.exporer.WikipediaParser'

jar {
    manifest {
        attributes(
		"Implementation-Title": project.name,
		"Implementation-Version": '0.1.0',
		"Main-Class": mainClassName)
    }
}

applicationDefaultJvmArgs = ["--add-modules", "java.xml.bind"]

dependencies {

	compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
	implementation 'com.squareup.okhttp3:okhttp:3.10.0'
	compile group: 'org.jsoup', name: 'jsoup', version: '1.11.2'
	implementation 'io.dropwizard:dropwizard-core:1.3.0'
}
